# gpt-os

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  LICENSE  README.md
.github/: copilot-instructions.md
benches/: flamegraph.rs  parse.rs
docs/: PROJECT_STRUCTURE.md
src/: config.rs  core.rs  error.rs  lib.rs  main.rs  parser.rs  processor.rs  types.rs  util.rs  writer.rs  xml_utils.rs
src/apple_health/: extractor.rs  types.rs
src/sinks/: csv_7z.rs  csv_zip.rs  mod.rs
tests/: integration_tests.rs  unit.rs
tests/fixtures/: sample_export.xml
