[package]
name = "gpt-os"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = "0.38.0"
rayon = "1.6"
dashmap = "6.1.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
zip = "4.2.0"
crossbeam-channel = "0.5"
memmap2 = "0.7"
anyhow = "1.0"
thiserror = "2.0.12"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
tempfile = "3.20.0"
erased-serde = "0.4.6"

# Profile configuration to optimize dependencies even in debug builds
[profile.dev]
# Keep your own code unoptimized for debugging
opt-level = 0
debug = true

# Build all dependencies with release optimizations
[profile.dev.package."*"]
opt-level = 3
debug = false
