[package]
name = "gpt-os"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.38.0"}
rayon = "1.6"
csv = "1.1"
zip = "4.3.0"
sevenz-rust = { version = "0.6", default-features = false, features = ["compress"] }
crossbeam-channel = "0.5"
memmap2 = "0.9.7"
thiserror = "2.0.12"
clap = { version = "4.5.41", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs", "sync", "io-util"] }
async-trait = "0.1"

[dev-dependencies]
quick-xml = "0.38.0"
tempfile = "3.20.0"
assert_cmd = "2.0.17"
criterion = { version = "0.6", features = ["html_reports"] }
tokio-test = "0.4"

# Profile configuration to optimize dependencies even in debug builds
[profile.dev]
# Keep your own code unoptimized for debugging
opt-level = 0
debug = true

# Build all dependencies with release optimizations
[profile.dev.package."*"]
opt-level = 3
debug = false

[[bench]]
name = "flamegraph"
harness = false

[profile.bench]
opt-level = 3
debug = true
