[package]
name = "gpt-os"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.38.3"}
rayon = "1.11.0"
csv = "1.3.1"
zip = "4.6.0"
crossbeam-channel = "0.5.15"
memmap2 = "0.9.8"
thiserror = "2.0.16"
ahash = "0.8.11"
clap = { version = "4.5.46", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "sync", "io-util"] }
async-trait = "0.1.89"

[dev-dependencies]
quick-xml = "0.38.3"
tempfile = "3.21.0"
assert_cmd = "2.0.17"
criterion = { version = "0.7.0", features = ["html_reports"] }
tokio-test = "0.4.4"

# Profile configuration to optimize dependencies even in debug builds
[profile.dev]
# Keep your own code unoptimized for debugging
opt-level = 0
debug = true

# Build all dependencies with release optimizations
[profile.dev.package."*"]
opt-level = 3
debug = false

[[bench]]
name = "flamegraph"
harness = false

[[bench]]
name = "parse"
harness = false

[profile.bench]
opt-level = 3
debug = true
